--- a/EMART-UI/src/app/Account/login/login.component.html
+++ b/EMART-UI/src/app/Account/login/login.component.html
@@ -1,22 +1,22 @@
 <style>
     form{
-        color: white;
+        color:#be79df;
     }
 </style>
-<div class="container card col-md-5 " style="background-color:black;height:400px;float: left;">
+<div class="container card col-md-5 " style="background-color:transparent;height:400px;float: left;">
 <div id="login-box">
 <div class="logo">
 
-<h1  class="tweak" style="color:gold">Login</h1>
+<h1  class="tweak" style="color:#be79df">Login</h1>
 </div><!-- /.logo -->
 <form class="controls" [formGroup]="loginform" (click)="Login()">
 <input type="text"  formControlName="uname"  placeholder="Username" class="form-control" />&nbsp;&nbsp;
 <input type="password" formControlName="password"  placeholder="Password" class="form-control" />&nbsp;&nbsp;
 <input type="radio" formControlName="role" value="buyer"  >Buyer
 <input type="radio" formControlName="role" value="seller" >Seller
-<button type="button" class="btn btn-default btn-block btn-custom"  style="background-color:cyan;">Login</button><br>
-<a [routerLink]="'/home/registerbuyer'"    style="color:gold;">Register New Buyer ?</a>&nbsp;&nbsp;<br>
-<a [routerLink]="'/home/registerseller'" style="color:gold;">Register New Seller ?</a>          
+<button type="button" class="btn btn-default btn-block btn-custom btn-primary">Login</button><br>
+<a [routerLink]="'/home/registerbuyer'"    style="color:#be79df;">Register New Buyer ?</a>&nbsp;&nbsp;<br>
+<a [routerLink]="'/home/registerseller'" style="color:#be79df;">Register New Seller ?</a>          
 
 
 
