--- a/EMART-UI/src/app/Admin/view-category/view-category.component.html
+++ b/EMART-UI/src/app/Admin/view-category/view-category.component.html
@@ -6,8 +6,12 @@ color:white;
     #r{
         color: white;
     }
+    #y{
+      float: right;
+    }
 </style>
-<div class="card m-1" style="width:100%;align-items: center;background-color: black;">
+<div id="y">
+<div class="card " style="width:100%;align-items: center;background-color: black;">
     <div class="container">
         <table class="table table-bordered">
             <tr id="e">
@@ -73,3 +77,4 @@ color:white;
     
         </div>
     
+    </div>
