--- a/EMART-UI/src/app/Admin/view/view.component.html
+++ b/EMART-UI/src/app/Admin/view/view.component.html
@@ -9,9 +9,25 @@ color: white;
 #m{
     align-content: center;
 }
+#u{
+    float: right ;
+}
     
 </style>
-<div  id="m" class="card m-1" style="width:100%;align-items: center; background-color: black;text-decoration-color: white;">
+<div id="u">
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+<div  id="m" class="card" style="width:100%;align-items: center; background-color: black;text-decoration-color: white;">
     <div class="container">
         <table class="table table-bordered align-content center">
             <tr id="e">
@@ -33,3 +49,4 @@ color: white;
         </table>
     </div>
     </div>
+</div>
