--- a/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
+++ b/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
@@ -90,7 +90,7 @@
 </div>
 <div class="form-group">
     <label>Image Path</label>
-    <input type="text" formControlName="imagepath" class="form-control" readonly   />
+    <input type="text" formControlName="imagepath" class="form-control"   />
    
 </div>
     
