--- a/EMART-UI/src/app/Account/registerseller/registerseller.component.html
+++ b/EMART-UI/src/app/Account/registerseller/registerseller.component.html
@@ -1,9 +1,9 @@
 <style>
     label{
-        color:gold
+        color:#be79df
     }
 </style>
-<div class="container card col-md-5" style="height: 300;background-color:black;">
+<div class="container card col-md-5" style="height: 300;background-color:transparent;">
     <div class="card-body" >
         <form [formGroup]="sellerregisterform" (ngSubmit)="onSubmit()"   >
     
@@ -24,14 +24,14 @@
             </div>
             <div class="form-group">
                 <label>Breif about Company</label>
-                <input type="text" formControlName="brief_about_company" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.brief_about_company.errors }" />
+                <textarea formControlName="brief_about_company" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.brief_about_company.errors }" ></textarea>
                 <div *ngIf="submitted && f.brief_about_company.errors" class="invalid-feedback">
                     <div *ngIf="f.brief_about_company.errors.required">about company is required</div>
                 </div>
         </div>
         <div class="form-group">
             <label>Postal Adress</label>
-            <input type="text" formControlName="postal_address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.postal_address.errors }" />
+            <textarea type="text" formControlName="postal_address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.postal_address.errors }" ></textarea>
             <div *ngIf="submitted && f.postal_address.errors" class="invalid-feedback">
                 <div *ngIf="f.postal_address.errors.required">postal address is required</div>
             </div>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             <div class="text-center">
-                <button class="btn btn-primary mr-1" >Submit</button>
+                <button class="btn btn-primary mr-1" >Register</button>
           </div>
         </form>
     </div>
