--- a/EMART-UI/src/app/Admin/add-subcategory/add-subcategory.component.html
+++ b/EMART-UI/src/app/Admin/add-subcategory/add-subcategory.component.html
@@ -4,10 +4,27 @@
     label{
         color:gold
     }
+    #t{
+        float: right;
+    }
    
    
 </style>
-<div class="container card col-md-4 "  id="u" style="height: 300;background-color:black;">
+<div id="t">
+
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+<div class="container"  id="u" style="height: 300;background-color:black;">
     <div class="card-body" >
         <form [formGroup]="addsubcategoryform" (ngSubmit)="onSubmit()"  >
            
@@ -21,7 +38,7 @@
                     </div>
              </div>
              <div class="form-group">
-                <label style="color: whitesmoke;">Choose Category</label>
+                <label style="color:gold;">Choose Category</label>
                 <!-- <input type="text" formControlName="categoryId" class="form-control" /> -->
                 <select formControlName="categoryid" class="form-control" >
                      <option *ngFor="let item of clist" value="{{item.categoryId}}">{{item.categoryName}}</option>   
@@ -50,6 +67,6 @@
         </form>
     </div>
 </div>
-
+</div>
 
 
