--- a/EMART-UI/src/app/Seller/additems/additems.component.html
+++ b/EMART-UI/src/app/Seller/additems/additems.component.html
@@ -6,10 +6,18 @@
 
         float:right;
     }
+    #u{
+        float: left;
+    }
   
    
 </style>
-<div class="container card col-md-3"  id="u" style="height: 300;background-color:black;align-content: center;">
+<div id="u">
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+<div class="container "  id="u" style=" background-color:black;align-content: center;">
     <div class="card-body" >
         <form [formGroup]="additemform"   >
              <div class="form-group">
@@ -45,7 +53,7 @@
         </div>
         <div class="form-group">
             <label>Description</label>
-            <input type="text" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
+            <textarea type="text" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" ></textarea>
             <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
                 <div *ngIf="f.description.errors.required">Description is required</div>
             </div>
@@ -68,7 +76,7 @@
  </div>
     <div class="form-group">
         <label>Remarks</label>
-        <input type="text" formControlName="remarks" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.remarks.errors }">
+        <textarea type="text" formControlName="remarks" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.remarks.errors }"></textarea>
            <div *ngIf="submitted && f.remarks.errors" class="invalid-feedback">
             <div *ngIf="f.remarks.errors.required">GSTIN is required</div>
         </div>
@@ -83,6 +91,7 @@
           </div>
         </form>
     </div>
+</div>
 </div>
 
 
